--- a/trunk/MiniDatabase/ContentPage.xaml
+++ b/trunk/MiniDatabase/ContentPage.xaml
@@ -2,9 +2,27 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Minis!" Height="350" Width="525">
+    <Window.Resources>
+        
+    </Window.Resources>
     <Grid>
-        <Menu Height="23" HorizontalAlignment="Left" Name="main_menu" VerticalAlignment="Top">
+        <StackPanel>
+            <Menu Height="23" HorizontalAlignment="Left" Name="main_menu" VerticalAlignment="Top">
+            <MenuItem Header="_File">
+                <MenuItem Header="_Create new database" Click="RequestNewDatabase"/>
+            </MenuItem>
             <MenuItem Header="_About" Click="AboutClick" />
         </Menu>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="8*"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <TextBox Grid.Column="0">Text</TextBox>
+                <Button Grid.Column="1">Back</Button>
+                <Button Grid.Column="2">Confirm</Button>
+            </Grid>
+        </StackPanel>
     </Grid>
 </Window>
