--- a/MiniDatabase/Themes/Generic.xaml
+++ b/MiniDatabase/Themes/Generic.xaml
@@ -1,13 +1,13 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:MiniDatabase">
+    xmlns:createFields="clr-namespace:MiniDatabase.CreateFields"
+    xmlns:misc="clr-namespace:MiniDatabase.Misc">
 
-
-    <Style TargetType="{x:Type local:CreateTextField}">
+    <Style TargetType="{x:Type createFields:CreateFieldText}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:CreateTextField}">
+                <ControlTemplate TargetType="{x:Type createFields:CreateFieldText}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
@@ -17,10 +17,10 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type local:CreateFieldText}">
+    <Style TargetType="{x:Type createFields:CreateFieldInteger}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:CreateFieldText}">
+                <ControlTemplate TargetType="{x:Type createFields:CreateFieldInteger}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
@@ -30,10 +30,10 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type local:CreateFieldText}">
+    <Style TargetType="{x:Type misc:NumericUpDown}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:CreateFieldText}">
+                <ControlTemplate TargetType="{x:Type misc:NumericUpDown}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
@@ -42,17 +42,5 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-    <Style TargetType="{x:Type local:NumericUpDown}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:NumericUpDown}">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+    
 </ResourceDictionary>
