--- a/trunk/MiniDatabase/Themes/Generic.xaml
+++ b/trunk/MiniDatabase/Themes/Generic.xaml
@@ -4,6 +4,7 @@
     xmlns:createFields="clr-namespace:MiniDatabase.CreateFields"
     xmlns:misc="clr-namespace:MiniDatabase.Misc">
 
+    
     <Style TargetType="{x:Type createFields:CreateFieldText}">
         <Setter Property="Template">
             <Setter.Value>
@@ -37,6 +38,17 @@
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="7*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=misc:NumericUpDown, AncestorLevel=1}, Path=NumericValue}" />
+                            <StackPanel Orientation="Vertical" Grid.Column="1">
+                                <Button Name="BPlus">+</Button>
+                                <Button Name="BMinus">-</Button>
+                            </StackPanel>
+                        </Grid>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
