--- a/trunk/MiniDatabase/Themes/Generic.xaml
+++ b/trunk/MiniDatabase/Themes/Generic.xaml
@@ -43,7 +43,7 @@
                                 <ColumnDefinition Width="7*"/>
                                 <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=misc:NumericUpDown, AncestorLevel=1}, Path=NumericValue}" />
+                            <TextBlock Grid.Column="0" Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=misc:NumericUpDown, AncestorLevel=1}, Path=NumericValue}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             <StackPanel Orientation="Vertical" Grid.Column="1">
                                 <Button Name="BPlus">+</Button>
                                 <Button Name="BMinus">-</Button>
