--- a/MiniDatabase/CreateFields/CreateFieldEnum.xaml
+++ b/MiniDatabase/CreateFields/CreateFieldEnum.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="MiniDatabase.CreateFields.CreateFieldText"
+﻿<UserControl x:Class="MiniDatabase.CreateFields.CreateFieldEnum"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="300">
-    <DockPanel>
-        <TextBox Name="TextField" />
-    </DockPanel>
+    <Grid>
+            
+    </Grid>
 </UserControl>
