--- a/trunk/MiniDatabase/CreateFields/CreateFieldEnum.xaml
+++ b/trunk/MiniDatabase/CreateFields/CreateFieldEnum.xaml
@@ -5,7 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="300">
-    <Grid>
-            
+    <Grid >
+        <TextBox Name="AttName" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">test</TextBox>
+        <ComboBox Name="EnumValues" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding EnumSource}">            
+        </ComboBox>        
     </Grid>
 </UserControl>
