--- a/MiniDatabase/ContentPage.xaml
+++ b/MiniDatabase/ContentPage.xaml
@@ -17,10 +17,22 @@
             </MenuItem>
             <MenuItem Header="_About" Click="AboutClick" />
             </Menu>
-            <StackPanel Grid.Row="1">
-                <misc:NumericUpDown />
-                <misc:NumericUpDown />
-                <misc:NumericUpDown />
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0">
+                    <misc:NumericUpDown />
+                    <misc:NumericUpDown />
+                    <misc:NumericUpDown />
+                </StackPanel>
+            <StackPanel Grid.Column="1">
+                <Button>Add Enum</Button>
+                <Button>Add Text</Button>
+                <Button>Add date</Button>
+                <Button>Add integer</Button>
             </StackPanel>
+        </Grid>
     </Grid>
 </Window>
