--- a/trunk/MiniDatabase/CreateFields/CreateFieldGeneric.xaml
+++ b/trunk/MiniDatabase/CreateFields/CreateFieldGeneric.xaml
@@ -4,8 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="50" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5*" />
+            <ColumnDefinition Width="10*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        <TextBox>Enter name </TextBox>
+        <CheckBox Grid.Column="2">multiline</CheckBox>
+        <Button Name="RemoveButton" Grid.Column="3" >Remove</Button>
     </Grid>
 </UserControl>
