--- a/MiniDatabase/ContentPage.xaml
+++ b/MiniDatabase/ContentPage.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:misc="clr-namespace:MiniDatabase.Misc"
+        xmlns:createFields="clr-namespace:MiniDatabase.CreateFields"
         Title="Minis!" Height="350" Width="525">
     <Window.Resources>
         
@@ -23,6 +24,7 @@
                 <ColumnDefinition Width="1*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0">
+                    <createFields:CreateFieldGeneric />
                     <misc:NumericUpDown />
                     <misc:NumericUpDown />
                     <misc:NumericUpDown />
