--- a/MiniDatabase/CreateFields/CreateFieldGeneric.xaml
+++ b/MiniDatabase/CreateFields/CreateFieldGeneric.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:misc="clr-namespace:MiniDatabase.Misc"
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="300">
+             d:DesignHeight="50" d:DesignWidth="300" xmlns:my="clr-namespace:MiniDatabase.CreateFields">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="5*" />
@@ -12,8 +13,9 @@
             <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <TextBox>Enter name </TextBox>
-        <CheckBox Grid.Column="2">multiline</CheckBox>
+        <TextBox>Enter name</TextBox>
+        <ContentControl Grid.Column="1" Name="Special" Content="{Binding Path=Specialization, RelativeSource={RelativeSource FindAncestor, AncestorType=my:CreateFieldGeneric, AncestorLevel=1}}" />
+        <CheckBox Grid.Column="2">Multiline</CheckBox>
         <Button Name="RemoveButton" Grid.Column="3" >Remove</Button>
     </Grid>
 </UserControl>
