--- a/MiniDatabase/CreateFields/CreateFieldInteger.xaml
+++ b/MiniDatabase/CreateFields/CreateFieldInteger.xaml
@@ -3,9 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:misc="clr-namespace:MiniDatabase.Misc"
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <misc:NumericUpDown Grid.Column="0"></misc:NumericUpDown>
+        <TextBox Grid.Column="1">min</TextBox>
+        <TextBox Grid.Column="2">max</TextBox>
     </Grid>
 </UserControl>
