--- a/MiniDatabase/CreateFields/CreateFieldEnum.xaml
+++ b/MiniDatabase/CreateFields/CreateFieldEnum.xaml
@@ -4,10 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="50" d:DesignWidth="300">
+             d:DesignHeight="50" d:DesignWidth="300" xmlns:my="clr-namespace:MiniDatabase.CreateFields">
     <Grid >
-        <TextBox Name="AttName" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">test</TextBox>
-        <ComboBox Name="EnumValues" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding EnumSource}">            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <ComboBox Name="EnumName" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></ComboBox>
+        <ComboBox Grid.Column="1"  Name="EnumValues" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:CreateFieldEnum, AncestorLevel=1}, Path=EnumSource}">   
         </ComboBox>        
     </Grid>
 </UserControl>
