--- a/MiniDatabase/CreateFields/CreateFieldEnum.xaml
+++ b/MiniDatabase/CreateFields/CreateFieldEnum.xaml
@@ -9,9 +9,12 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <ComboBox Name="EnumName" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></ComboBox>
-        <ComboBox Grid.Column="1"  Name="EnumValues" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:CreateFieldEnum, AncestorLevel=1}, Path=EnumSource}">   
-        </ComboBox>        
+        <ComboBox Name="EnumName" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:CreateFieldEnum, AncestorLevel=1}, Path=EnumSource}">
+        </ComboBox>
+        <ComboBox Grid.Column="1" IsEditable="True" Name="EnumValues" ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=my:CreateFieldEnum, AncestorLevel=1}, Path=EnumSource}" >   
+        </ComboBox>
+        <Button Grid.Column="2" Content="Button" Name="buttonX"/>
     </Grid>
 </UserControl>
