--- a/MiniDatabase/CreateFields/CreateFieldText.xaml
+++ b/MiniDatabase/CreateFields/CreateFieldText.xaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="300">
     <DockPanel>
+        <Label>Default value</Label>
         <TextBox Name="TextField" />
     </DockPanel>
 </UserControl>
