--- a/trunk/MiniDatabase/CreateFields/CreateFieldGeneric.xaml
+++ b/trunk/MiniDatabase/CreateFields/CreateFieldGeneric.xaml
@@ -15,7 +15,8 @@
             <RowDefinition MinHeight="50" Height="*" />
         </Grid.RowDefinitions>
         <Button Grid.Column="0" Grid.Row="0" Margin="15" MinHeight="30" MinWidth="50">Create text</Button>
-        <Button Grid.Column="0" Grid.Row="1" Margin="85,15" MinHeight="30" MinWidth="50" Grid.ColumnSpan="2">Create int value</Button>
+        <Button Grid.Column="0" Grid.Row="1" Margin="15" MinHeight="30" MinWidth="50">Create int value</Button>
         <Button Grid.Column="1" Grid.Row="0" Margin="15" MinHeight="30" MinWidth="50">Create enum</Button>
+        <Button Grid.Column="1" Grid.Row="1" Margin="15" MinHeight="30" MinWidth="50">Create composite</Button>
     </Grid>
 </UserControl>
