--- a/MiniDatabase/Content/OpenDatabase.xaml
+++ b/MiniDatabase/Content/OpenDatabase.xaml
@@ -13,8 +13,8 @@
             <ListBox x:Name="Databases"  Margin="10" ItemsSource="{Binding Filenames}" DisplayMemberPath="Name"  SelectedValue="{Binding Filename}">
             </ListBox>
         <StackPanel Grid.Row="1"  Orientation="Horizontal" HorizontalAlignment="Right" Margin="15">
-            <Button Width="100" IsCancel="True">Cancel</Button>
-            <Button Width="100" IsDefault="True" Click="LoadDatabase">Ok</Button>
+            <Button Width="100" IsCancel="True" Margin="0,0,10,0">Cancel</Button>
+            <Button Width="100" IsDefault="True"  Margin="10,0,0,0" Click="LoadDatabase">Ok</Button>
         </StackPanel>
     </Grid>
 </Window>
